[add] control flow

--- a/src/app/dashboard/pages/control-flow/control-flow.component.html
+++ b/src/app/dashboard/pages/control-flow/control-flow.component.html
@@ -1,10 +1,14 @@
-<section class="grid grid-cols-1 md:grid-cols-2 gap-3 ">
-  <div class="bg-white rounded shadow p-10">
-    <h2 class="text-2xl font-bold mb-5">if: {{showContent()}}</h2>
+<!-- FALSE -->
+<!-- <app-title title="Control-Flow"  /> -->
 
-    <button (click)="toggleContent()">
-      Click me!
-    </button>
+<!-- TRUE -->
+<app-title title="Control-Flow"  whihShadow />
+
+<section class="grid grid-cols-1 md:grid-cols-2 gap-3">
+  <div class="bg-white rounded shadow p-10">
+    <h2 class="text-2xl font-bold mb-5">if: {{ showContent() }}</h2>
+
+    <button class="bg-red-400 px-3 py-2"  (click)="toggleContent()">Click me!</button>
 
     @if(showContent()) {
     <h2>que cosa tan efectiva</h2>
@@ -12,23 +16,42 @@
     <h2>********</h2>
     }
   </div>
-</section>
 
-<section class="grid grid-cols-1 md:grid-cols-2 gap-3 ">
   <div class="bg-white rounded shadow p-10">
-    @switch (grade()) {
-    @case ('A'){
+    <h2>{{grade()}}</h2>
+    @switch (grade()) { @case ('A'){
     <p>Arriba de 90</p>
-    }
-    @case ('B'){
+    } @case ('B'){
     <p>Arriba de 80</p>
 
-    }
-    @default {
+    } @default {
     <p>Reprobado</p>
 
-    }
-    }
-
+    } }
+  </div>
+  <div class="bg-white rounded shadow p-10">
+    <ul>
+      @for (frame of frames(); track frame;
+      let i = $index, first = $first, last = $last, count = $count, even = $even, odd = $odd
+        ) {
+        <li [class]="{
+        'bg-purple-500': even && !first  && !last,
+        'bg-indigo-500': odd && !first  && !last,
+        'bg-red-500': first  || last,
+        }"
+        >{{i + 1 }} | ({{count}}) | {{frame}}</li>
+      }
+    </ul>
+  </div>
+  <div class="bg-white rounded shadow p-10">
+    <ul>
+      @for (frame of frames2(); track $index) {
+        <li>{{frame}}</li>
+      }@empty {
+        <li>No hay frames en el array, en cuanto exista uno eso cambia
+          `Usando -empty`
+        </li>
+      }
+    </ul>
   </div>
 </section>
