--- a/src/app/shared/sidemenu/sidemenu.component.html
+++ b/src/app/shared/sidemenu/sidemenu.component.html
@@ -1,9 +1,9 @@
 <div id="menu" class="bg-gray-900 min-h-screen z-10 text-slate-300 w-64  left-0 h-screen overflow-y-scroll">
-  <div id="logo" class="my-4 px-6">
+  <!-- <div id="logo" class="my-4 px-6">
     <h1 class="text-lg md:text-2xl font-bold text-white">Dash<span class="text-blue-500">8</span>.</h1>
     <p class="text-slate-500 text-sm">Manage your actions and activities</p>
-  </div>
-  <div id="profile" class="px-6 py-10">
+  </div> -->
+  <div id="profile" class="px-6 py-4">
     <p class="text-slate-500">Welcome back,</p>
     <a href="#" class="inline-flex space-x-2 items-center">
       <span>
