--- a/src/app/dashboard/pages/defer-views/defer-views.component.html
+++ b/src/app/dashboard/pages/defer-views/defer-views.component.html
@@ -1,1 +1,24 @@
-<p>defer-views works!</p>,
+<app-title title="Defer views"  />
+<section class="grid grid-cols-1"  >
+
+  @defer () {
+    <app-heavy-loaders cssClass="bg-blue-500" />
+  }@placeholder {
+    <p class="h-[600px] w-full bg-gradient-to-r from-gray-200 to-gray-400 animate-pulse  "
+    >Cargando...</p>
+  }
+  @defer (on idle ) {
+    <app-heavy-loaders cssClass="bg-red-500" />
+  }@placeholder {
+    <p class="h-[600px] w-full bg-gradient-to-r from-gray-200 to-gray-400 animate-pulse  "
+    >Cargando...</p>
+  }
+  @defer (on viewport) {
+    <app-heavy-loaders cssClass="bg-zinc-500" />
+  }@placeholder {
+    <p class="h-[600px] w-full bg-gradient-to-r from-gray-200 to-gray-400 animate-pulse  "
+    >Cargando...</p>
+  }
+
+
+</section>
