--- a/src/app/dashboard/pages/defer-views/defer-views.component.html
+++ b/src/app/dashboard/pages/defer-views/defer-views.component.html
@@ -1,4 +1,4 @@
-<app-title title="Defer views"  />
+<app-title title="Defer views \ blocks  "  />
 <section class="grid grid-cols-1"  >
 
   @defer () {
