--- a/src/app/dashboard/pages/users/users.component.html
+++ b/src/app/dashboard/pages/users/users.component.html
@@ -1,1 +1,23 @@
-<p>users works!</p>,
+<app-title title="Users list" />
+
+<section>
+  <ul>
+    @for (user of userService.users(); track user.id) {
+      <li class="flex items-center my-2 cursor-pointer"  >
+        <img
+        [srcset]="user.avatar"
+        [alt]="user.first_name"
+        class="rounded-md w-14"
+        />
+
+        <a [routerLink]="['/dashboard/user', user.id]"
+        class="mx-5 hover:underline"
+        >
+          {{user.first_name}} {{user.last_name}}
+        </a>
+      </li>
+    }@empty {
+      <h2>Espere cargando data</h2>
+    }
+  </ul>
+</section>
